# examshell-python

./: .gitignore  LICENSE  README.md  helper.js  pyproject.toml  test.py
exam42/rendu/py_cryptic_sorter/: py_cryptic_sorter.py
exam42/subjects/: py_cryptic_sorter.de.txt  py_cryptic_sorter.en.txt  py_cryptic_sorter.es.txt  py_cryptic_sorter.fr.txt  py_cryptic_sorter.it.txt
src/: main.py  models.py  task_generator.py  ui.py
src/examshell/: __init__.py  __main__.py  main.py  models.py  task_generator.py
src/examshell/data/: data.json
