[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examshell-python"
version = "0.1.6"
description = "Interactive 42-style exam practice shell for Python exercises"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Denis" }
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
examshell42 = "examshell.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
examshell = ["data/*.json"]
